# TEP

./: .gitignore  .gitmodules
List_1/: CMakeLists.txt  main.cpp
List_1-2/: CMakeLists.txt  main.cpp
List_1-2/inc/: Table.hpp
List_1-2/src/: CMakeLists.txt  Table.cpp  Utilities.cpp
List_1-2/test/tests/: CMakeLists.txt  Test_Utilities.cpp
List_1/inc/: Table.hpp  Utilities.hpp  Utilities_Helpers.hpp
List_1/src/: CMakeLists.txt  Table.cpp  Utilities.cpp  Utilities_Helpers.cpp
List_1/test/: CMakeLists.txt
List_1/test/tests/: CMakeLists.txt  Test_Utilities.cpp  Test_Utilities_Helpers.cpp
List_3/: CMakeLists.txt  main.cpp
List_3/Under_Work/: CMakeLists.txt  main.cpp
List_3/Under_Work/inc/: INode_Base.hpp  ITree_Base.hpp  Node_Base.hpp  Tree_Base.hpp  Tree_Dynamic.hpp  Tree_Static.hpp
List_3/Under_Work/src/: CMakeLists.txt  ITree_Base.cpp  Tree_Base.cpp  Tree_Dynamic.cpp  Tree_Static.cpp
List_3/inc/: Tree_Dynamic.hpp  Tree_Static.hpp
List_3/src/: CMakeLists.txt  Tree_Dynamic.cpp  Tree_Static.cpp
List_5/: CMakeLists.txt  main.cpp
List_5/inc/: A.hpp  B.hpp  Control_Block.hpp  Tab.hpp  Unique_Ptr.hpp
List_5/src/: Shared_Pointer.cpp  Tab.cpp  Unique_Ptr.cpp
Max3Sat/: CMakeLists.txt  main.cpp
Max3Sat/inc/MemoryManagement/: Shared_Pointer.hpp  Unique_Ptr.hpp
Max3Sat/inc/Population/: Clause.hpp  Individual.hpp  Population_Overseer.hpp  Variable.hpp
Max3Sat/inc/Solver/: Max3Sat.hpp  Optimizer.hpp  Problem.hpp
Max3Sat/inc/Utils/: Timer.hpp  Util.hpp
Max3Sat/src/: CMakeLists.txt
Max3Sat/src/MemoryManagement/: CMakeLists.txt  Control_Block.cpp  Shared_Pointer.cpp  Unique_Ptr.cpp
Max3Sat/src/Population/: CMakeLists.txt  Clause.cpp  Individual.cpp  Population_Overseer.cpp  Variable.cpp
Max3Sat/src/Solver/: CMakeLists.txt  Max3Sat.cpp  Optimizer.cpp  Problem.cpp
Max3Sat/src/Utils/: CMakeLists.txt  Timer.cpp  Util.cpp
